# Self-Forcing

./: .gitignore  inference.py  pyproject.toml  train.py
configs/: default_config.yaml  ttt_e2e.yaml  ttt_e2e_0to1.yaml  ttt_e2e_1to3.yaml  ttt_e2e_lr1.yaml  ttt_e2e_lr1e-3.yaml  ttt_naive.yaml  ttt_naive_lr1.yaml  ttt_naive_lr1e-3.yaml
model/: __init__.py  base.py  ttt.py
pipeline/: __init__.py  causal_diffusion_inference.py  causal_inference.py  self_forcing_training.py  ttt_inference.py  ttt_training.py
tests/: test_base.py  test_batch.py  test_batch_fsdp.py  test_final.py  test_meta_pipeline.py  test_multi_outer.py  test_optimizers.py  test_sequence.py  test_sequence_checkpointing.py
trainer/: distillation.py
utils/: distributed.py  meta_learning.py  wan_cache.py  wan_wrapper.py
wan/modules/: causal_model.py  model.py
