[project]
name = "self-forcing"
version = "0.1.0"
description = "Self-Forcing: Bridging the Gap between Training and Inference in Autoregressive Video Generation"
requires-python = ">=3.10, <3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.9.0.80",
    "diffusers==0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "numpy==1.24.4",
    "wandb",
    "omegaconf",
    "einops",
    "av==13.1.0",
    "clip",
    "open-clip-torch",
    "starlette",
    "pycocotools",
    "lmdb",
    "matplotlib",
    "sentencepiece",
    "pydantic==2.10.6",
    "scikit-image",
    "huggingface-hub[cli]",
    "dominate",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "onnxconverter-common",
    "flask",
    "flask-socketio",
    "torchao",
    "setuptools",
]

[project.optional-dependencies]
cuda = [
    "flash-attn",
    "pycuda",
    "nvidia-tensorrt",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
